--- a/visualizacion/longersummer.html
+++ b/visualizacion/longersummer.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="longersummer.css">
 </head>
 <body>
-    <main id="visualization-container">
-        <div id="sticky-container">
-            <div id="decade-averages-container"></div>
-            <div id="year-info"></div>
+    <div id="longer-summer-visualization-container">
+        <div id="longer-summer-sticky-container">
+            <div id="longer-summer-decade-averages-container"></div>
+            <div id="longer-summer-year-info"></div>
             <div style="position: relative;">
-                <div id="day-track" class="day-track"></div>
-                <div id="month-labels-container" class="month-labels-container"></div>
+                <div id="longer-summer-day-track" class="longer-summer-day-track"></div>
+                <div id="longer-summer-month-labels-container" class="longer-summer-month-labels-container"></div>
             </div>
         </div>
-        <div id="scroll-spacer"></div>
-    </main>
+        <div id="longer-summer-scroll-spacer"></div>
+    </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
