--- a/visualizacion/hotdays.html
+++ b/visualizacion/hotdays.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Días de Verano por Encima de la Media Histórica</title>
-    <link rel="stylesheet" href="hot-days.css">
+    <link rel="stylesheet" href="hotdays.css">
 </head>
 <body>
     <div id="hot-days-visualization-container">
@@ -17,6 +17,6 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <script src="hot-days.js"></script>
+    <script src="hotdays.js"></script>
 </body>
 </html>
